added transition to navbar & modified container color

--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,13 @@
 
 body {
   margin: 0;
+  background-image: url("/public/background.png");
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
