--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@font-face {
+  font-family: 'Shine Typewriter';
+  src: url('/public/ShineTypewriterRegular.woff2') format('woff2'),
+      url('/public/ShineTypewriterRegular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
