centering content on home page

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 
 body {
   margin: 0;
- 
+  /* background-image: url("/public/library.jpg");
+  background-size:initial; */
+  background-color: #E0C9A6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
