--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
   margin: 0;
-  background-color: #EAEAEA;
+  background-color: #eaeaea;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+#scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: rgba(223, 223, 223, 0.298);
+  border: rgba(13, 9, 9, 0.74);
+}
