--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background-color: #eaeaea;
+  background-color: #fff3de;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
