--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,49 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 #scroll-to-top {
   position: fixed;
+
   bottom: 20px;
   right: 20px;
   background-color: rgba(223, 223, 223, 0.298);
   border: rgba(13, 9, 9, 0.74);
+}
+.plant-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 300px;
+  margin: 0 auto;
+}
+
+.plant-stem {
+  width: 10px;
+  height: 100px;
+  background-color: green;
+}
+
+.plant-leaf {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: green;
+  transform: rotate(45deg);
+  animation: leaf-sway 2s infinite ease-in-out alternate;
+}
+
+@keyframes leaf-sway {
+  0% {
+    transform: rotate(45deg);
+  }
+  50% {
+    transform: rotate(60deg);
+  }
+  100% {
+    transform: rotate(45deg);
+  }
 }
